fix height of collapse opened container

--- a/src/Sass/Components/collapse.scss
+++ b/src/Sass/Components/collapse.scss
@@ -1,69 +1,73 @@
 .collapse-header {
-    position: relative;
-    height: 47px;
-    background: #ff6060;
-    display: flex;
-    align-items: center;
-    justify-content: left;
-    font-weight: bold;
-    cursor: pointer;
-    padding-left: 15px;
-    color: #ffffff;
+  position: relative;
+  height: 47px;
+  background: #ff6060;
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  font-weight: bold;
+  cursor: pointer;
+  padding-left: 15px;
+  color: #ffffff;
   
-    .chevron {
-      position: absolute;
-      top: 50%;
-      right: 15px;
+  .chevron {
+    position: absolute;
+    top: 50%;
+    right: 15px;
+    
+    border-style: solid;
+    border-width: 0.25em 0.25em 0 0;
+    content: '';
+    display: inline-block;
+    height: 0.45em;
+    width: 0.45em;
+    transition: transform 0.2s ease;
+    &.open:before {
+      transform: translate(-50%, -50%) rotate(45deg);
+    }
+  }
+  
+  &.open .chevron {
+    transform: translateY(-50%) rotate(135deg);
+  }
+}
 
-      border-style: solid;
-      border-width: 0.25em 0.25em 0 0;
-      content: '';
-      display: inline-block;
-      height: 0.45em;
-      width: 0.45em;
-      transition: transform 0.2s ease;
-      &.open:before {
-        transform: translate(-50%, -50%) rotate(45deg);
-      }
-    }
+.collapse-content {
+  background: #f6f6f6;
+  overflow: hidden;
+  transition: height 0.3s ease;
   
-    &.open .chevron {
-        transform: translateY(-50%) rotate(135deg);
-    }
+  &.collapsed {
+    height: 0;
+    
   }
   
-  .collapse-content {
-    background: #f6f6f6;
-    overflow: hidden;
-    transition: height 0.3s ease;
-  
-    &.collapsed {
-      height: 0;
-    }
-  
-    &.expanded {
-      height: 184px;
-      text-align: center;
-      font-family: 'Montserrat';
-      font-style: normal;
-      font-weight: 400;
-      font-size: 24px;
-      line-height: 142.6%;
-      color: #ff6060;
-  
-      p {
-        text-align: center;
-      }
+  &.expanded {
+    height: 275px;
+    text-align: center;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 21px;
+    line-height: 142.6%;
+    color: #ff6060;
+    
+    p {
+      text-align: justify;
+      margin-left: 3%;
+      margin-right: 3%;
+      width: 89%;
     }
   }
-  
-  .content {
-    width: 1023px;
-    height: 47px;
-    left: 9%;
-    top: 30%;
-  }
-  
+}
+
+.content {
+  width: 1023px;
+  height: 47px;
+  left: 9%;
+  top: 30%;
+}
+
 
 
 
@@ -76,25 +80,25 @@
 
 
 .chevron {
-    position: absolute;
-    top: 50%;
-    right: 15px;
-    transform: translateY(-50%);
-    border-style: solid;
-    border-width: 0.25em 0.25em 0 0;
-    content: '';
-    display: inline-block;
-    height: 0.45em;
-    width: 0.45em;
-    vertical-align: top;
-  }
-  
-  
-  .chevron.open:before {
-    transform: rotate(135deg);
-  }
-  
- .collapse-header .chevron {
+  position: absolute;
+  top: 50%;
+  right: 15px;
+  transform: translateY(-50%);
+  border-style: solid;
+  border-width: 0.25em 0.25em 0 0;
+  content: '';
+  display: inline-block;
+  height: 0.45em;
+  width: 0.45em;
+  vertical-align: top;
+}
+
+
+.chevron.open:before {
+  transform: rotate(135deg);
+}
+
+.collapse-header .chevron {
   position: absolute;
   top: 50%;
   right: 15px;
@@ -108,15 +112,15 @@
 }
 
 .collapse-header .chevron {
-    transform: translateY(-50%) rotate(315deg);
+  transform: translateY(-50%) rotate(315deg);
 }
 
 .collapse-container {
-margin-top: 3%;
+  margin-top: 3%;
 }
 
 
 
 .body_logement_detail {
-height: 60rem;
+  height: 60rem;
 }
