--- a/src/Sass/Components/logementdetails.scss
+++ b/src/Sass/Components/logementdetails.scss
@@ -67,6 +67,7 @@ text-align: unset;
     height: 18rem;
     display: flex;
     justify-content: space-between;
+    margin-bottom: 8rem;
 }
 
 .content_collapse {
